--- a/package.json
+++ b/package.json
@@ -4,17 +4,29 @@
   "description": "shift mangement",
   "main": "app.ts",
   "scripts": {
+    "dev": "nodemon ./src/app.ts",
+    "start": "ts-node ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sir guevara",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9"
   }
 }
