--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.10",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "zod": "^3.22.4"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14"
   }
 }
